Use the tarball's version of setup.cfg
setup.py sdist actually re-writes the setup.cfg using RawConfigParser
when it appends the egg-info section. This changes the whitespace
and breaks downstream patches to setup.cfg.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,38 +2,38 @@
 name = heat
 version = 2014.1.5
 summary = OpenStack Orchestration
-description-file =
-    README.rst
+description-file = 
+	README.rst
 author = OpenStack
 author-email = openstack-dev@lists.openstack.org
 home-page = http://www.openstack.org/
-classifier =
-    Environment :: OpenStack
-    Intended Audience :: Information Technology
-    Intended Audience :: System Administrators
-    License :: OSI Approved :: Apache Software License
-    Operating System :: POSIX :: Linux
-    Programming Language :: Python
-    Programming Language :: Python :: 2
-    Programming Language :: Python :: 2.7
-    Programming Language :: Python :: 2.6
+classifier = 
+	Environment :: OpenStack
+	Intended Audience :: Information Technology
+	Intended Audience :: System Administrators
+	License :: OSI Approved :: Apache Software License
+	Operating System :: POSIX :: Linux
+	Programming Language :: Python
+	Programming Language :: Python :: 2
+	Programming Language :: Python :: 2.7
+	Programming Language :: Python :: 2.6
 
 [files]
-packages =
-    heat
-scripts =
-    bin/cinder-keystone-setup
-    bin/heat-api
-    bin/heat-api-cfn
-    bin/heat-api-cloudwatch
-    bin/heat-db-setup
-    bin/heat-engine
-    bin/heat-keystone-setup
-    bin/heat-manage
+packages = 
+	heat
+scripts = 
+	bin/cinder-keystone-setup
+	bin/heat-api
+	bin/heat-api-cfn
+	bin/heat-api-cloudwatch
+	bin/heat-db-setup
+	bin/heat-engine
+	bin/heat-keystone-setup
+	bin/heat-manage
 
 [global]
-setup-hooks =
-    pbr.hooks.setup_hook
+setup-hooks = 
+	pbr.hooks.setup_hook
 
 [compile_catalog]
 directory = heat/locale
@@ -53,3 +53,9 @@ output_file = heat/locale/heat.pot
 all_files = 1
 build-dir = doc/build
 source-dir = doc/source
+
+[egg_info]
+tag_build = 
+tag_date = 0
+tag_svn_revision = 0
+
